[package]
name = "derive_builder"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

# For debugging macro by using cargo expand --bin <NAME>
[[bin]]
name = "01"
path = "tests/01-parse.rs"
[[bin]]
name = "02"
path = "tests/02-create-builder.rs"
[[bin]]
name = "03"
path = "tests/03-call-setters.rs"
[[bin]]
name = "04"
path = "tests/04-call-build.rs"
[[bin]]
name = "05"
path = "tests/05-method-chaining.rs"
[[bin]]
name = "06"
path = "tests/06-optional-field.rs"
[[bin]]
name = "07"
path = "tests/07-repeated-field.rs"
#[[bin]]
#name = "08"
#path = "tests/08-unrecognized-attribute.rs"
#[[bin]]
#name = "09"
#path = "tests/09-redefined-prelude-types.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
